# rust-zero2prod

./: .gitignore  Cargo.toml  configuration.yaml  shell.nix
migrations/: 20230513150500_create_subscriptions_table.sql
scripts/: init_db.sh  stop_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscriptions.rs
tests/fixtures/: test_app.rs
